--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "103ddc83-b6c1-4509-b5f0-55df41206a33"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
